--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mantenimiento.multimediaproyect" >
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,6 +21,10 @@
         <activity
             android:name=".PlayerActivity"
             android:label="@string/title_activity_player" >
+        </activity>
+        <activity
+            android:name=".FileChooser"
+            android:label="@string/title_activity_file_chooser" >
         </activity>
     </application>
 
